# bit-hack-2024

./: .gitignore  README.md
backend/: main.py  pyproject.toml
data-raw/: weather_data.csv
extension/: main.js  manifest.json
model/: data.py  model.py  predicExample.py  requirements.txt  test.py  testdata  train.py
preprocess/: preprocess.py
sapka/: index.html  package.json
sapka/src/: App.vue  main.ts  red.scss  style.scss
sapka/src/components/: PoolDetailView.vue  PoolListView.vue  PredictionGraph.vue
sapka/src/helpers/: pools.ts
sapka/src/pages/: GraphPage.vue
