[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Martin Gaens <djsushi123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "^0.115.0", extras = ["standard"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
