[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Martin Gaens <djsushi123@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {version = "^0.115.0", extras = ["standard"] }
# numpy
#pandas
# scikit-learn
# scipy
# tensorflow
# matplotlib

numpy = "^1"
pandas = "2.2.3"
scikit-learn = "1.5.2"
scipy = "1.14.1"
tensorflow = "2.17.0"
matplotlib = "3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
